src/styles/style.css
/** CSS STYLE **/
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');

:root {
  --white: #fff;
  --translucent-white: #d7ccc0;
  --light: #f5f4f0;
  --main-color: #fe8a02;
  --main-dark: #42413c;
  --dark: #2a2626;
  --translucent-dark: #908d8b;
  --brown: #b09a81;
  --blue: #1085c5;
  --font-color: #2A2626;
 }

body {
  margin: 0;
  min-width: 1110px;
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
  line-height: 1.6em;
  color: var(--font-color);
}

.title {
  margin: 0;
  font-family: 'Neucha', cursive;
  line-height: 1.2em;
  font-weight: normal;
}

.page-header {
  position: relative;
  margin-bottom: 200px;
  font-size: 72px;
}

.front {
  position: relative;
  z-index: 2;
}

.page-header::after {
  position: absolute;
  top: -55px;
  right: -280px;
  z-index: 1;
  height: 525px;
  content: url(../img/main.png);
}

.section-header {
  margin-bottom: 30px;
  font-size: 60px;
}

.summary {
  font-size: 34px;
}

.title-color {
  color: var(--main-color);
}

.content {
  column-count: 2;
  column-gap: 30px;
  column-width: 540px;
}

.content p {
  margin-top: 0;
  break-inside: avoid-column;
}

.container {
  position: relative;
  width: 1110px;
  margin: 0 auto;
  padding: 100px 0;
}

.back-decoration-light {
  position: relative;
  margin: 0;
  width: 100%;
  overflow: hidden;
}

.back-decoration-light::before {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: url(../img/background.png);
  background-color: var(--light);
  opacity: 0.9;
  background-origin: border-box;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  content: "";
}

.btn-more {
  display: block;
  width: 100px;
  height: 25px;
  margin-top: 40px;
  padding: 12px 24px;
  font-weight: bold;
  text-transform: uppercase;
  background-color: var(--main-color);
  border: none;
  text-decoration: none;
  color: var(--white);
}

.video {
  display: block;
  text-align: center;
  position: relative;
  z-index: 1;
  margin: 0 auto -200px auto;
  width: 919px;
  height: 569px;
  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
}

.video-section {
  text-align: center;
}

.centered-title {
  text-align: center;
  margin-bottom: 30px;
}

.centered-title > p {
  margin: 0;
}

#navigation {
  padding: 200px 0 100px 0;
  background-color: var(--main-dark);
}

.flex-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 1110px;
  margin: 0 auto;
}

.card-1 {
  margin: 0 0 20px 0;
  width: 350px;
  height: 323px;
  color: var(--white);
}

.card-1>.title {
  font-weight: normal;
  font-size: 52px;
}

.card-2 {
  display: block;
  margin: 0 0 20px 0;
  width: 302px;
  height: 275px;
  padding: 24px;
  text-decoration: none;
  color: var(--font-color);
  background-color: var(--light);
}

.card-2:nth-of-type(n+3) {
  height: 300px;
  margin: 0;
}

.card-2:hover {
  background-color: var(--main-color);
  color: var(--white);
}

.card-2:hover>.title-color {
  color: var(--white);
}

.number {
  margin: 0;
  padding-bottom: 40px;
  font: 64px/1 'Neucha', cursive;
}

.main-topic {
  font-size: 24px;
  color:var(--translucent-dark);
}

.column-header-light {
  column-span: all;
  margin-bottom: 20px;
  padding: 0 10px;
  font-weight: bold;
  font-size: 14px;
  color: var(--white);
  text-transform: uppercase;
  background-color: var(--brown);
}

.top-half {
  display: flex;
  margin-bottom: 100px;
}

.right-side {
  margin-left: 30px;
}

.shadow {
  filter: drop-shadow(0px 16px 32px rgba(0, 0, 0, 0.15));
}

.column-1 {
  break-after: column;
}

.right-side::before {
  content: attr(data-header);
  font-size: 24px;
  color:var(--translucent-dark);
  font-family: 'Neucha', cursive;
  line-height: 1.2em;
  font-weight: normal;
}

.back-decoration-dark {
  position: relative;
  margin: 0;
  width: 100%;
  overflow: hidden;
  color: var(--white);
}

.back-decoration-dark::before {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: url(../img/background.png);
  background-color: var(--brown);
  opacity: 0.9;
  background-origin: border-box;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  content: "";
}

.left-side {
  margin-right: 30px;
}

.left-side::before {
  content: attr(data-header);
  font-size: 24px;
  color: #d7ccc0;
  font-family: 'Neucha', cursive;
  line-height: 1.2em;
  font-weight: normal;
}

.column-header-dark {
  column-span: all;
  margin-top: 0;
  margin-bottom: 20px;
  padding: 0 10px;
  font-weight: bold;
  font-size: 14px;
  color: var(--brown);
  text-transform: uppercase;
  background-color: var(--white);
}

